@@ -118,3 +118,6 @@ Thanks to the following, who submitted detailed bug reports and excellent sugges
   Leon Grünewald
   Ivo Forlin
   aMOPel
+  Per Møldrup-Dalum
+  Beshoy Girgis
+  Sergey Zhuravlevich
