@@ -1,3 +1,5 @@
+- #493    :lastweek doesn't count last Sunday
+          (thanks to Saulius Krasuckas, Per Møldrup-Dalum, Beshoy Girgis, Sergey Zhuravlevich)
 -         Add ':today' hint
 
  ------ current release ---------------------------
